--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Example Banking Project for ES and DDD</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.version>5.3.24</spring.version>
 	</properties>
 	<dependencies>
 		<!-- Axon -->
@@ -32,9 +33,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+
+		<!-- Web/rest related -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.15</version>
 		</dependency>
 
 		<dependency>
