--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=username
 spring.datasource.password=password
+
+# Required for Springfox to be able to crawl API endpoints
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
